<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bluetooth is required for this app. Turn it on?"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>


            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Turn on bluetooth." />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>